hphp/test/zend/bad/ext-spl/fileobject_getbasename_basic.php
<?php
$file = __FILE__;
$s = new SplFileObject( __FILE__ );
echo $s->getBasename();
?>